--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-hook-form": "^7.48.2",
+    "react-native": "0.73.0",
+    "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
